# nomadshots

./: .gitignore  AGENTS.md  LICENSE  PRD.md  README.md  SPEC.md  pyproject.toml
src/nomadshots/: __init__.py  audit.py  cli.py  exiftool_adapter.py  geocoder.py  models.py  report.py
src/nomadshots/data/: ATTRIBUTION.md
tests/: conftest.py  generate_fixtures.py  test_audit_e2e.py  test_exiftool_adapter.py  test_geocoder.py  test_immutability.py  test_package_data.py  test_sensitive_tags.py
tests/fixtures/: GPS_UPPER.HEIC
