[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nomadshots"
version = "0.1.0"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = ["typer>=0.12,<1.0"]

[project.scripts]
nomadshots = "nomadshots.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nomadshots = ["data/*"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pillow>=10.0", "pillow-heif>=0.13", "piexif>=1.1.3"]
