[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nomadshots"
version = "0.1.0"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = ["typer==0.26.7"]

[project.scripts]
nomadshots = "nomadshots.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nomadshots = ["data/*"]

[project.optional-dependencies]
dev = ["pytest==7.4.3", "pillow==12.2.0", "pillow-heif==1.4.0", "piexif==1.1.3"]
